# home-assistant-dropcountr

./: .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: configuration.yaml
custom_components/dropcountr/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  hourly.py  manifest.json  sensor.py  services.yaml  strings.json
scripts/: lint  setup  test
tests/: __init__.py  conftest.py  const.py  test_binary_sensor.py  test_config_flow.py  test_cost_statistics.py  test_historical_data.py  test_init.py  test_monthly_sensor.py  test_previous_day_statistics.py  test_sensor.py  test_sensor_filtering.py  test_timezone_handling.py
