[project]
name = "home-assistant-dropcountr"
version = "1.2.0"
description = "Home Assistant integration for DropCountr water monitoring"
authors = [
    {name = "Matt Colyer", email = "matt@colyer.name"}
]
requires-python = ">= 3.13.2"
dependencies = [
    "async-timeout>4.0.3",
    "homeassistant==2025.7.4",
    "pydropcountr==1.0.0",
]

[project.optional-dependencies]
dev = [
    "colorlog",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff==0.12.11",
    "uv>0.4.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]